[tool.poetry]
name = "saferoute"
version = "0.1.0"
description = "AI-powered travel safety and tourism intelligence"
authors = ["kiojoel <akinsanyajoel82@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
geopandas = "^0.14.0"
pandas = "^2.2.0"
shapely = "^2.0.0"
pyogrio = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
