[project]
name = "pipeline"
version = "0.1.0"
description = "SafeRoute data ingestion and ML pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyogrio>=0.12.1",
    "python-dotenv>=1.2.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
